# pulsar-aws-lab

./: .envrc  .gitignore  AMI_DEPLOYMENT_GUIDE.md  CLAUDE.md  ENHANCED_REPORTING.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  SYNCHRONIZED_CHARTS.md  notes.md  pyproject.toml
.claude/: architecture.md  patterns.md  troubleshooting.md
ansible/: ansible.cfg  requirements.yml
ansible/playbooks/: deploy.yaml
config/: infrastructure.yaml  pulsar-cluster.yaml
config/schema/: infrastructure.schema.json  pulsar-cluster.schema.json  test-plan.schema.json
config/test-plans/: RAMPING-WORKLOADS.md  README.md  baseline.yaml  high-throughput-100.yaml  high-throughput-1000.yaml  high-throughput-1200.yaml  poc.yaml  (+24 more)
crds/: README.md
docs/: AMI-QUICK-REFERENCE.md  BUILD-AMI-GUIDE.md  QUICKSTART.md  running-load-tests.md  storage-class-setup.md
helm/: Chart.yaml  values.yaml
packer/: .gitignore  FILES.txt  Makefile  QUICK_START.md  README.md  build.sh  pulsar-base.pkr.hcl  setup-iam-role.sh  variables.pkrvars.hcl
scripts/: build-ami.py  build-omb-image.sh  cleanup_by_tag.py  cli.py  cost_tracker.py  interactive_charts.py  kubernetes_manager.py  metrics_collector.py  mirror-pulsar-images.sh  omb_charts.py  operations.py  orchestrator.py  orchestrator.py.backup  pulsar_manager.py  report_generator.py  requirements.txt  results_collector.py  search-iam-permission.py  test_build_ami.py  tui.py
terraform/: main.tf  outputs.tf  variables.tf
workloads/: high-throughput.yaml  large-messages.yaml  latency-test.yaml  multi-topic.yaml  poc.yaml  simple-test.yaml
(+59 files in other folders)
